--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -30,7 +30,8 @@
 <link rel="canonical" href="{{ page.url | absolute_url }}">
 
 <!-- Favicon and Icons -->
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 24 24%22><text y=%2216%22 font-size=%2220%22>😇</text></svg>">
+<link rel="icon" type="image/svg+xml" href="{{ '/assets/images/favicon.svg?v=1' | relative_url }}">
+<link rel="alternate icon" type="image/png" href="{{ '/assets/images/thehealthylifestyleguide-thumbnail.png' | relative_url }}">
 <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/thehealthylifestyleguide-thumbnail.png' | relative_url }}">
 
 <!-- Preconnect for Performance -->
