Refactor note card title styling for improved layout and readability

--- a/_includes/note-card.html
+++ b/_includes/note-card.html
@@ -39,7 +39,7 @@ Parameters:
     <div class="note-card-title-block">
       {%- if episode_title != '' -%}
         <div class="note-card-guest">{{ guest_name }}</div>
-        <h3 class="note-card-title"><span class="note-card-episode">“{{ episode_title }}”</span></h3>
+  <h3 class="note-card-title"><span class="note-card-episode">{{ episode_title }}</span></h3>
       {%- else -%}
         <h3 class="note-card-title"><span class="note-card-episode">{{ guest_name }}</span></h3>
       {%- endif -%}
