Add search functionality and enhance mobile menu visibility

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -305,5 +305,9 @@
         'floating-chat.donateButton.text-color': '#fff'
       });
     </script>
+
+    <!-- Search dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/lunr/lunr.min.js" integrity="sha384-+pTskUM44zVJ9cxZf4M1J4HwIACtsanW4h+pQgquxYTInGBpr1bUT0rT0GokH9d2" crossorigin="anonymous"></script>
+    <script src="/assets/js/search.js?v={{ site.time | date: '%s' }}" defer></script>
   </body>
 </html>
