Refactor footer and default layout links for consistency; add Instagram icon styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,12 @@
       <h4>Quick Links</h4>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/#diet--nutrition-">Diet & Nutrition</a></li>
-        <li><a href="/#health--wellness-️">General Health</a></li>
-        <li><a href="/#exercise--fitness-">Exercise & Fitness</a></li>
+        <li><a href="/#diet-nutrition-">Diet & Nutrition</a></li>
+        <li><a href="/#health-wellness-️">Health & Wellness</a></li>
+        <li><a href="/#exercise-fitness-">Exercise & Fitness</a></li>
         <li><a href="/#sleep-optimization-">Sleep Optimization</a></li>
-        <li><a href="/#brain-health--stress-management-">Brain Health</a></li>
-        <li><a href="/#happiness--spirituality-">Happiness & Spirituality</a></li>
+        <li><a href="/#brain-stress-">Brain & Stress</a></li>
+        <li><a href="/#happiness-spirituality-">Happiness & Spirituality</a></li>
       </ul>
     </div>
     
