--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,12 @@
       <h4>Quick Links</h4>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/#diet-nutrition-">Diet & Nutrition</a></li>
-        <li><a href="/#health-wellness-️">Health & Wellness</a></li>
-        <li><a href="/#exercise-fitness-">Exercise & Fitness</a></li>
-        <li><a href="/#sleep-optimization-">Sleep Optimization</a></li>
-        <li><a href="/#brain-stress-">Brain & Stress</a></li>
-        <li><a href="/#happiness-spirituality-">Happiness & Spirituality</a></li>
+        <li><a href="/#diet-nutrition">Diet & Nutrition</a></li>
+        <li><a href="/#health-wellness">Health & Wellness</a></li>
+        <li><a href="/#exercise-fitness">Exercise & Fitness</a></li>
+        <li><a href="/#sleep-rest">Sleep & Rest</a></li>
+        <li><a href="/#brain-stress">Brain & Stress</a></li>
+        <li><a href="/#happiness-spirituality">Happiness & Spirituality</a></li>
       </ul>
     </div>
     
